2000-10-26  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed (actually, worked-around) virtue-stone bug.

2000-10-24  Jeff Freedman  <jeff@amy.nerble.net>

	* Reagants bug & resolution-change bug fixed.
	* Version changed to Alpha.01.

2000-10-19  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed 2 bugs: Crash in Despise after generator, and problem with
	readying 2-handed weapons on 'restore'.

2000-10-17  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Look for local 'data' if necessary.
	* If motion blocked, try to swap positions with actor
	that's in the way.

2000-10-16  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Try_key handles the 'k' key.

2000-10-15  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.cc: >Trying< to fix dungeon rendering bug in Courage Test.
	* Restart game clock after a restore.

2000-10-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* drag.cc: weight checking disabled when in hack_mover mode
	* exult.cc, gameclk.cc: added alt-i=infravision. (palette never darkens)

2000-10-12  Jeff Freedman  <jeff@amy.nerble.net>

	* readnpcs.cc: Fixed monster bug that's been causing lots of
	crashes upon game load.

2000-10-11  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Support ring-of-protection (which doesn't seem to
	work in the original U7).

2000-10-09  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Rings work now.

2000-10-08  Jeff Freedman  <jeff@amy.nerble.net>

	* Show invisible NPC's as shadows.
	* Added primitive 'xform' support to shape browser.

2000-10-07  Jeff Freedman  <jeff@amy.nerble.net>

	* Working on invisibiliy and protection flags.
	* Worked a 'sleep' flag.  Poppy field now works.

2000-10-05  Jeff Freedman  <jeff@amy.nerble.net>

	* Put in Artaxerxes' body shapes.
	* Use 'belt' position on paperdoll.

2000-10-04  Jeff Freedman  <jeff@amy.nerble.net>

	* Restart_game() intrinsic implemented.

2000-10-03  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc: Guards attack when you steel.