@@ -30,7 +30,7 @@ MAIN_OBJS=actions.o actorio.o actors.o alloc.o animate.o \
 	gumps.o imagescl.o imagewin.o items.o lists.o mouse.o npcnear.o \
 	npctime.o  objs.o palette.o paths.o readnpcs.o scale.o schedule.o \
 	segfile.o sigame.o spells.o tqueue.o usecode.o \
-        useval.o utils.o vec.o vgafile.o  
+        useval.o utils.o vec.o vgafile.o virstone.o
 # unused: npctest.o
 PATH_OBJS=Astar.o PathFinder.o Zombie.o path.o
 CONF_OBJS=Configuration.o XMLEntity.o xmldump.o xmlparse.o
