@@ -29,7 +29,8 @@ MAIN_OBJS=actions.o actorio.o actors.o alloc.o animate.o \
 	gumps.o imagescl.o imagewin.o items.o lists.o mouse.o \
 	npcnear.o objs.o palette.o paths.o readnpcs.o scale.o schedule.o \
 	segfile.o spells.o tqueue.o usecode.o game.o bggame.o sigame.o \
-        useval.o utils.o vec.o vgafile.o browser.o npctime.o exultico.o
+        useval.o utils.o vec.o vgafile.o browser.o npctime.o exultico.o \
+	virstone.o
 # unused: npctest.o
 PATH_OBJS=Astar.o PathFinder.o Zombie.o path.o
 CONF_OBJS=Configuration.o XMLEntity.o xmldump.o xmlparse.o
