@@ -1,3 +1,7 @@
+2000-10-27  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Straightened out virtue stones.
+
 2000-10-26  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Fixed (actually, worked-around) virtue-stone bug.
